--- a/Rise.Client/_Imports.razor
+++ b/Rise.Client/_Imports.razor
@@ -8,7 +8,7 @@
 @using Microsoft.JSInterop
 @using Rise.Client
 @using Rise.Client.Layout
-@using Client.Auth
+@using Rise.Client.Auth
 @using Microsoft.AspNetCore.Components.Authorization  
 @using Microsoft.AspNetCore.Authorization
 @using Rise.Client.Components
