--- a/Rise.Client/Layout/MainLayout.razor
+++ b/Rise.Client/Layout/MainLayout.razor
@@ -8,6 +8,7 @@
     <main>
         <div class="top-row px-4">
             <Rise.Client.Auth.LoginDisplay />
+            <Winkelkar />
         </div>
 
         <article class="content px-4">
