--- a/Rise.Client/Products/ProductDetail.razor
+++ b/Rise.Client/Products/ProductDetail.razor
@@ -26,7 +26,7 @@
                                     <Overzichtlijn Lijn=@item />
                                 }
                                 <div class="text-end mt-4">
-                                    <button class="btn btn-dark">Uitscannen bevestigen</button>
+                                    <button class="btn btn-dark" @onclick="PlaatsBestelling">Uitscannen bevestigen</button>
                                 </div>
                             </div>
                         </div>
